all helpers added

--- a/app/views/helpers/_build_datafiles.html.erb
+++ b/app/views/helpers/_build_datafiles.html.erb
@@ -204,18 +204,18 @@
 
 
 <!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
-<%= javascript_include_tag 'jquery.ui.widget.js' %>
+<%= javascript_include_tag 'backbone_js/jquery.ui.widget.js' %>
 <!-- The Templates and Load Image plugins are included for the FileUpload user interface -->
 <!--<script src="http://blueimp.github.com/JavaScript-Templates/tmpl.min.js"></script>-->
 <!--<script src="http://blueimp.github.com/JavaScript-Load-Image/load-image.min.js"></script>-->
 
-<%= javascript_include_tag 'tmpl.min.js' %>
-<%= javascript_include_tag 'load-image.min.js' %>
+<%= javascript_include_tag 'backbone_js/tmpl.min.js' %>
+<%= javascript_include_tag 'backbone_js/load-image.min.js' %>
 
 <!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
-<%= javascript_include_tag 'jquery.iframe-transport.js' %>
-<%= javascript_include_tag 'jquery.fileupload.js' %>
-<%= javascript_include_tag 'jquery.fileupload-ui.js' %>
+<%= javascript_include_tag 'backbone_js/jquery.iframe-transport.js' %>
+<%= javascript_include_tag 'backbone_js/jquery.fileupload.js' %>
+<%= javascript_include_tag 'backbone_js/jquery.fileupload-ui.js' %>
 <!-- add include_tag js files to config.assets.precompile in ...environments/production.rb if you have it in vendor/ assets -->
 
 <script type="text/javascript" charset="utf-8">
