all helpers added

--- a/app/assets/stylesheets/backbone_css/jquery_ui.css.scss
+++ b/app/assets/stylesheets/backbone_css/jquery_ui.css.scss
@@ -1,4 +1,4 @@
-$base: "../backbone_images";
+$base: "/assets/backbone_images";
 
 $bg-body: url("#{$base}/bg-body.jpg");
 $bg-button-a: url("#{$base}/bg-button-a.png");
