--- a/app/assets/stylesheets/backbone_css/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/backbone_css/bootstrap_and_overrides.css.scss
@@ -1,6 +1,6 @@
 // Set the correct sprite paths
-$iconSpritePath: asset-url('glyphicons-halflings.png', image);
-$iconWhiteSpritePath: asset-url('glyphicons-halflings-white.png', image);
+$iconSpritePath: asset-url('/assets/backbone_images/glyphicons-halflings.png', image);
+$iconWhiteSpritePath: asset-url('/assets/backbone_images/glyphicons-halflings-white.png', image);
 @import "bootstrap";
 body { padding-top: 60px; }
 @import "bootstrap-responsive";
