--- a/app/views/helpers/_build_table_filter.html.erb
+++ b/app/views/helpers/_build_table_filter.html.erb
@@ -11,7 +11,7 @@
 
 <%# end %>
 
-<%#= javascript_include_tag 'backbone_js/tmpl.min.js' %>
+<%= javascript_include_tag '/assets/backbone_js/tmpl.min.js' %>
 <script type="text/javascript">
     $(document).ready(function () {
         <% if settings[:template].blank? %>
