--- a/app/views/helpers/_build_table_filter.html.erb
+++ b/app/views/helpers/_build_table_filter.html.erb
@@ -77,11 +77,19 @@
         {% button_settings['origin'] = 'table'; %}
         {% var stringified_button_settings = JSON.stringify(button_settings); %}
 
+        {% var sliced_text = button_settings['name']; %}
+        {% if (col.max_text_length) { %}
+          {% var max = col.max_text_length - 3; %}
+          {% if ( max > 0 && sliced_text.length > max) { %}
+              {% sliced_text = sliced_text.slice(0, col.max_text_length) + "..."; %}
+          {% } %}
+        {% } %}
+
         {% if (button_settings.symlink_controller || button_settings.symlink_action || button_settings.symlink_id || button_settings.symlink_outer_controller || button_settings.symlink_outer_id) { %}
             {% var non_ajax_url = build_get_url(button_settings); %}
-            <a href="{%= non_ajax_url %}" class="{%= button_settings['class'] %}" data-tr_class="{%= button_settings.tr_class %}" data-td_class="{%= button_settings.td_class %}" onclick="load_page({%= stringified_button_settings %}, this); return false;">{%= button_settings['name'] %}</a>
+            <a title="{%= button_settings['name'] %}" href="{%= non_ajax_url %}" class="{%= button_settings['class'] %}" data-tr_class="{%= button_settings.tr_class %}" data-td_class="{%= button_settings.td_class %}" onclick="load_page({%= stringified_button_settings %}, this); return false;">{%= sliced_text %}</a>
         {% } else { %}
-            <span class="{%= button_settings['class'] %}" data-tr_class="{%= button_settings.tr_class %}">{%= button_settings['name'] %}</span>
+            <span title="{%= button_settings['name'] %}" class="{%= button_settings['class'] %}" data-tr_class="{%= button_settings.tr_class %}">{%= sliced_text %}</span>
         {% } %}
       {% } else if (is_array(row[col.table + '_' + col.name])) { %}
         {% var one_cell_buttons = row[col.table + '_' + col.name]; %}
@@ -90,11 +98,19 @@
           {% button_settings['origin'] = 'table'; %}
           {% var stringified_button_settings = JSON.stringify(button_settings); %}
 
+          {% var sliced_text = button_settings['name']; %}
+          {% if (col.max_text_length) { %}
+            {% var max = col.max_text_length - 3; %}
+            {% if ( max > 0 && sliced_text.length > max) { %}
+             {% sliced_text = sliced_text.slice(0, col.max_text_length) + "..."; %}
+            {% } %}
+          {% } %}
+
           {% if (button_settings.symlink_controller || button_settings.symlink_action || button_settings.symlink_id || button_settings.symlink_outer_controller || button_settings.symlink_outer_id) { %}
               {% var non_ajax_url = build_get_url(button_settings); %}
-              <a href="{%= non_ajax_url %}" class="{%= button_settings['class'] %}" data-tr_class="{%= button_settings.tr_class %}" data-td_class="{%= button_settings.td_class %}" onclick="load_page({%= stringified_button_settings %}, this); return false;">{%= button_settings['name'] %}</a>
+              <a title="{%= button_settings['name'] %}" href="{%= non_ajax_url %}" class="{%= button_settings['class'] %}" data-tr_class="{%= button_settings.tr_class %}" data-td_class="{%= button_settings.td_class %}" onclick="load_page({%= stringified_button_settings %}, this); return false;">{%= sliced_text %}</a>
           {% } else { %}
-              <span class="{%= button_settings['class'] %}" data-tr_class="{%= button_settings.tr_class %}">{%= button_settings['name'] %}</span>
+              <span title="{%= button_settings['name'] %}" class="{%= button_settings['class'] %}" data-tr_class="{%= button_settings.tr_class %}">{%= sliced_text %}</span>
           {% } %}
         {% } %}
       {% } else if (is_string(row[col.table + '_' + col.name])) { %}
