firefox dont like big colspan

--- a/app/views/helpers/_build_table_wrapper.html.erb
+++ b/app/views/helpers/_build_table_wrapper.html.erb
@@ -1,7 +1,7 @@
 <table class="table table-bordered table-condensed table_special">
   <thead>
   <tr>
-    <th colspan="10000000" class="<%= settings[:form_id] + '_ajax_pager' %>">
+    <th colspan="100" class="<%= settings[:form_id] + '_ajax_pager' %>">
       <%= render :partial => 'helpers/build_table_pager', :locals => {:settings => settings} %>
     </th>
   </tr>
@@ -68,7 +68,7 @@
   </tbody>
   <tfoot>
   <tr>
-    <th colspan="10000000" class="<%= settings[:form_id] + '_ajax_pager' %>">
+    <th colspan="100" class="<%= settings[:form_id] + '_ajax_pager' %>">
       <%= render :partial => 'helpers/build_table_pager', :locals => {:settings => settings} %>
     </th>
   </tr>
