--- a/app/views/helpers/_build_table_wrapper.html.erb
+++ b/app/views/helpers/_build_table_wrapper.html.erb
@@ -9,7 +9,10 @@
     <% if !settings[:row].blank? && !settings[:row][:functions].blank? %>
         <th></th>
     <% end %>
+    <% order_by_arr = settings[:params][:order_by].split(",") %>
     <% settings[:columns].each do |col| %>
+        <% order_asc_id = (col[:table] + "___" + col[:name] + "___ASC") %>
+        <% order_desc_id = (col[:table] + "___" + col[:name] + "___DESC") %>
         <th class="<%= col[:class] %>">
           <div class="th_label">
             <span><%= col[:label].html_safe %></span>
@@ -21,39 +24,41 @@
 
           <span onclick="filter_sort('<%= settings[:form_id] %>','<%= col[:table] + "." +col[:name] %>', 'ASC', this); return false;"
                 title="Seřadit vzestupně"
-                class="icon-arrow-up sort_button sort-up <%= (settings[:params][:order_by] == (col[:table] + "." + col[:name]) && settings[:params][:order_by_direction]=="ASC") ? "active" : "inactive" %>">
+                class="icon-arrow-up sort_button sort-up <%= (order_by_arr.include?(col[:table] + "." + col[:name] + " ASC")) ? "active" : "inactive" %>"
+                id="<%= order_asc_id %>">
             <span class="oos"></span></span>
            <span onclick="filter_sort('<%= settings[:form_id] %>','<%= col[:table] + "." +col[:name] %>', 'DESC', this); return false;"
                  title="Seřadit sestupně"
-                 class="icon-arrow-down sort_button sort-down <%= (settings[:params][:order_by] == (col[:table] + "." + col[:name]) && settings[:params][:order_by_direction]=="DESC") ? "active" : "inactive" %>">
+                 class="icon-arrow-down sort_button sort-down <%= (order_by_arr.include?(col[:table] + "." + col[:name] + " DESC")) ? "active" : "inactive" %>"
+                 id="<%= order_desc_id %>">
             <span class="oos "></span></span>
             <% end %>
-            <% case col[:filter] %>
+              <% case col[:filter] %>
             <% when :find %>
                 <% saved_param = (!settings[:params].blank? && !settings[:params]['find'].blank? && !settings[:params]['find']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['find']["#{col[:table]}.#{col[:name]}"] : "" %>
-                <span><%= text_field_tag "find[#{col[:table]}.#{col[:name]}]", saved_param,
-                                         {:class => "input-small text #{settings[:form_id] + '_column_find'}"} %>
+                  <span><%= text_field_tag "find[#{col[:table]}.#{col[:name]}]", saved_param,
+                                           {:class => "input-small text #{settings[:form_id] + '_column_find'}"} %>
                      </span>
             <% when :multichoice %>
                 <% saved_param = (!settings[:params].blank? && !settings[:params]['multichoice'].blank? && !settings[:params]['multichoice']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['multichoice']["#{col[:table]}.#{col[:name]}"] : [] %>
-                <span><%= select_tag("multichoice[#{col[:table]}.#{col[:name]}]", options_for_select(col[:filter_data], saved_param),
-                                     :onchange => "form_submit_watcher('#{settings[:form_id]}')",
-                                     :multiple => true,
-                                     :class => "multiselect_class") %></span>
+                  <span><%= select_tag("multichoice[#{col[:table]}.#{col[:name]}]", options_for_select(col[:filter_data], saved_param),
+                                       :onchange => "form_submit_watcher('#{settings[:form_id]}')",
+                                       :multiple => true,
+                                       :class => "multiselect_class") %></span>
             <% when :date %>
                 <% saved_param = (!settings[:params].blank? && !settings[:params]['date_from'].blank? && !settings[:params]['date_from']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['date_from']["#{col[:table]}.#{col[:name]}"] : "" %>
-                <%#= label_tag "date_from[#{col[:table]}.#{col[:name]}]", "Od", :class => "datetime_class_label" %>
-                <%= text_field_tag "date_from[#{col[:table]}.#{col[:name]}]", saved_param, {:class => "datetime_class input-small",
+                  <%#= label_tag "date_from[#{col[:table]}.#{col[:name]}]", "Od", :class => "datetime_class_label" %>
+                  <%= text_field_tag "date_from[#{col[:table]}.#{col[:name]}]", saved_param, {:class => "datetime_class input-small",
+                                                                                              :onchange => "form_submit_watcher('#{settings[:form_id]}')",
+                                                                                              :title => "Datum od"} %>
+                  <% saved_param = (!settings[:params].blank? && !settings[:params]['date_to'].blank? && !settings[:params]['date_to']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['date_to']["#{col[:table]}.#{col[:name]}"] : "" %>
+                  <%#= label_tag "date_to[#{col[:table]}.#{col[:name]}]", "Do", :class => "datetime_class_label" %>
+                  <%= text_field_tag "date_to[#{col[:table]}.#{col[:name]}]", saved_param, {:class => "datetime_class input-small",
                                                                                             :onchange => "form_submit_watcher('#{settings[:form_id]}')",
-                                                                                            :title => "Datum od"} %>
-                <% saved_param = (!settings[:params].blank? && !settings[:params]['date_to'].blank? && !settings[:params]['date_to']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['date_to']["#{col[:table]}.#{col[:name]}"] : "" %>
-                <%#= label_tag "date_to[#{col[:table]}.#{col[:name]}]", "Do", :class => "datetime_class_label" %>
-                <%= text_field_tag "date_to[#{col[:table]}.#{col[:name]}]", saved_param, {:class => "datetime_class input-small",
-                                                                                          :onchange => "form_submit_watcher('#{settings[:form_id]}')",
-                                                                                          :title => "Datum do"} %>
-                <span></span>
+                                                                                            :title => "Datum do"} %>
+                  <span></span>
             <% else %>
-            <% end %>
+              <% end %>
             </span>
           </div>
         </th>
