debuging table for IE8 tmpl min is probably errors 2

--- a/app/views/helpers/_build_table_filter.html.erb
+++ b/app/views/helpers/_build_table_filter.html.erb
@@ -11,8 +11,78 @@
 <%= hidden_field_tag :page, settings[:default][:page], :id => settings[:form_id] + '_page' %>
 
 <%# end %>
-
-<%= javascript_include_tag '/assets/backbone_js/tmpl.min.js' %>
+<script type="text/javascript">
+    (function ($) {
+        "use strict";
+        var tmpl = function (str, data) {
+            var f = !/[^\w\-\.:]/.test(str) ? tmpl.cache[str] = tmpl.cache[str] ||
+                    tmpl(tmpl.load(str)) :
+                        new Function(
+                            tmpl.arg + ',tmpl',
+                            "var _e=tmpl.encode" + tmpl.helper + ",_s='" +
+                                str.replace(tmpl.regexp, tmpl.func) +
+                                "';return _s;"
+                        );
+            return data ? f(data, tmpl) : function (data) {
+                return f(data, tmpl);
+            };
+        };
+        tmpl.cache = {};
+        tmpl.load = function (id) {
+            return document.getElementById(id).innerHTML;
+        };
+        tmpl.regexp = /([\s'\\])(?![^%]*%\})|(?:\{%(=|#)([\s\S]+?)%\})|(\{%)|(%\})/g;
+        tmpl.func = function (s, p1, p2, p3, p4, p5) {
+            if (p1) { // whitespace, quote and backspace in interpolation context
+                return {
+                    "\n": "\\n",
+                    "\r": "\\r",
+                    "\t": "\\t",
+                    " " : " "
+                }[s] || "\\" + s;
+            }
+            if (p2) { // interpolation: {%=prop%}, or unescaped: {%#prop%}
+                if (p2 === "=") {
+                    return "'+_e(" + p3 + ")+'";
+                }
+                return "'+(" + p3 + "||'')+'";
+            }
+            if (p4) { // evaluation start tag: {%
+                return "';";
+            }
+            if (p5) { // evaluation end tag: %}
+                return "_s+='";
+            }
+        };
+        tmpl.encReg = /[<>&"'\x00]/g;
+        tmpl.encMap = {
+            "<"   : "&lt;",
+            ">"   : "&gt;",
+            "&"   : "&amp;",
+            "\""  : "&quot;",
+            "'"   : "&#39;"
+        };
+        tmpl.encode = function (s) {
+            return String(s || "").replace(
+                tmpl.encReg,
+                function (c) {
+                    return tmpl.encMap[c] || "";
+                }
+            );
+        };
+        tmpl.arg = "o";
+        tmpl.helper = ",print=function(s,e){_s+=e&&(s||'')||_e(s);}" +
+            ",include=function(s,d){_s+=tmpl(s,d);}";
+        if (typeof define === "function" && define.amd) {
+            define(function () {
+                return tmpl;
+            });
+        } else {
+            $.tmpl = tmpl;
+        }
+    }(this));
+</script>
+<%#= javascript_include_tag '/assets/backbone_js/tmpl.min.js' %>
 <script type="text/javascript">
     $(document).ready(function () {
         <% if settings[:template].blank? %>
