--- a/app/views/helpers/_build_breadcrumb.html.erb
+++ b/app/views/helpers/_build_breadcrumb.html.erb
@@ -1,4 +1,4 @@
-<ul class="breadcrumb">
+<ul class="breadcrumb main_breadcrumb">
   <li>
     <%= ajax_link_to "Úvodní stránka", "/" %>
     <% if !breadcrumb.blank? %>
