--- a/app/views/helpers/_build_table_pager.html.erb
+++ b/app/views/helpers/_build_table_pager.html.erb
@@ -1,4 +1,8 @@
-<%= ajax_post_link_to "Smazat filtr", settings[:filter_path], :class => "btn", "data-post" => {:clear => true}.to_json, :style => "float: left" %>
+<%= ajax_post_link_to "Smazat filtr", settings[:filter_path],
+                      "data-content_id" => settings[:content_id].blank? ? "" : settings[:content_id],
+                      :class => "btn",
+                      "data-post" => {:clear => true}.to_json, :style => "float: left" %>
+
 <div id="<%= settings[:form_id] %>_pagination" class="pager <%= settings[:form_id] %>_pager">
     <span class="pager_pages">
       <%= will_paginate settings[:data_paginate], :container => false %>
