--- a/app/views/helpers/_build_datafiles.html.erb
+++ b/app/views/helpers/_build_datafiles.html.erb
@@ -1,6 +1,6 @@
-<% id = "fileupload_#{object.id}"
-   id += sub_type.to_s unless sub_type.blank?
-   form_id = id %>
+<% form_id = "fileupload_#{object.id}"
+   form_id += sub_type.to_s unless sub_type.blank?
+%>
 <% index_url = url_for(:controller => "/datafiles", "datafile[owner_type]" => "#{object.class.name.to_s}", "datafile[owner_id]" => "#{object.id.to_s}", "datafile[sub_type]" => sub_type) %>
 <%
    #if is_tree_node?(object)
@@ -14,6 +14,7 @@
    #  end
    #end
    tree_node = { :resource_type => "#{object.class.name.to_s}", :resource_id => "#{object.id.to_s}"}
+   tree_node[:sub_type] = sub_type unless sub_type.blank?
 %>
 <% if !tree_node.blank? %>
     <script type="text/javascript">
