updated jquery multiselect + multiselect find filter added

--- a/app/views/helpers/_build_table_wrapper.html.erb
+++ b/app/views/helpers/_build_table_wrapper.html.erb
@@ -126,7 +126,7 @@
         minWidth:100
     }, function () {
         form_submit_watcher('<%=settings[:form_id] %>');
-    });
+    }).multiselectfilter();
     //$('#filled_value_' + fid + '_' + rid).multiselect("open");
     $(".ui-multiselect-menu").css("width", "240px");
     $("button.ui-multiselect").css("width", "40px");
