--- a/app/assets/stylesheets/backbone_css/jquery_ui.css.scss
+++ b/app/assets/stylesheets/backbone_css/jquery_ui.css.scss
@@ -128,7 +128,7 @@ $filterArrowActive: url("#{$base}/bg-filter-arrow-active.png");
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Arial,sans-serif; font-size: 12px; }
 .ui-widget-content { border: 1px solid #b2b2b2; background: #ffffff $bgCalendarTitle 50% 50% repeat-x; color: #175dc1; }
 .ui-widget-content a { color: #175dc1; }
-.ui-widget-header { border: 1px solid #f60; background: #f60 $bg-header 50% 50% repeat-x; color: #fff; font-weight: bold; }
+.ui-widget-header { border: 1px solid #f60; background: #E60; color: #fff; font-weight: bold; }
 .ui-widget-header a { color: #fff; }
 
 /* Interaction states
@@ -425,7 +425,29 @@ $filterArrowActive: url("#{$base}/bg-filter-arrow-active.png");
 
 
 
+.ui-multiselect { padding:2px 0 2px 4px; text-align:left }
+.ui-multiselect span.ui-icon { float:right }
+.ui-multiselect-single .ui-multiselect-checkboxes input { position:absolute !important; top: auto !important; left:-9999px; }
+.ui-multiselect-single .ui-multiselect-checkboxes label { padding:5px !important }
 
+.ui-multiselect-header { margin-bottom:3px; padding:3px 0 3px 4px }
+.ui-multiselect-header ul { font-size:0.9em }
+.ui-multiselect-header ul li { float:left; padding:0 10px 0 0 }
+.ui-multiselect-header a { text-decoration:none }
+.ui-multiselect-header a:hover { text-decoration:underline }
+.ui-multiselect-header span.ui-icon { float:left }
+.ui-multiselect-header li.ui-multiselect-close { float:right; text-align:right; padding-right:0 }
+
+.ui-multiselect-menu { display:none; padding:3px; position:absolute; z-index:10000; text-align: left }
+.ui-multiselect-checkboxes { position:relative /* fixes bug in IE6/7 */; overflow-y:scroll }
+.ui-multiselect-checkboxes label { cursor:default; display:block; border:1px solid transparent; padding:3px 1px }
+.ui-multiselect-checkboxes label input { position:relative; top:1px }
+.ui-multiselect-checkboxes li { clear:both; font-size:0.9em; padding-right:3px }
+.ui-multiselect-checkboxes li.ui-multiselect-optgroup-label { text-align:center; font-weight:bold; border-bottom:1px solid }
+.ui-multiselect-checkboxes li.ui-multiselect-optgroup-label a { display:block; padding:3px; margin:1px 0; text-decoration:none }
+
+/* remove label borders in IE6 because IE6 does not support transparency */
+* html .ui-multiselect-checkboxes label { border:none }
 
 
 .ui-multiselect { padding:2px 0 2px 4px; text-align:left }
@@ -458,6 +480,11 @@ button.ui-multiselect.ui-widget{ padding: 0px; margin: 0px;}
   vertical-align: middle;
   margin-left: 3px;
 }
+
+
+.ui-multiselect-hasfilter ul { position:relative; top:2px }
+.ui-multiselect-filter { float:left; margin-right:10px; font-size:11px }
+.ui-multiselect-filter input { width:100px; font-size:10px; margin-left:5px; height:15px; padding:2px; border:1px solid #292929; -webkit-appearance:textfield; -webkit-box-sizing:content-box; }
 
 
 
